# agcounts

./: .Rhistory  .gitignore  Makefile  README.md  SerialEpochCounts.py  azure-pipelines.yml  extract.py  generate_data.py  generate_plots.py  pyagcounts.Rproj  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  tests.yml
agcounts/: __init__.py  data.py  extract.py  legacy.py  pow2.py
data/: 30Hz_output.csv  32Hz_input.csv  taso256HzLpf.csv  upsample256.csv  upsample256Lpf.csv
data/ActiLifeCounts/: raw_10_30_counts10sec.csv  raw_10_40_counts10sec.csv  raw_30_30_counts30sec.csv  raw_30_40_counts30sec.csv
data/CentrePointCounts/: raw_10_30_CentrePointCounts.csv  raw_10_40_CentrePointCounts.csv  raw_30_30_CentrePointCounts.csv  raw_30_40_CentrePointCounts.csv
figs/: blocks.dot  flowchart.dot
paper/: bmc_article.bib  bmc_article.tex
tests/: conftest.py  test_counts.py  test_pow2.py
