[tool.poetry]
name = "agcounts"
version = "0.2.5"
description = "This project contains code to generate activity counts from accelerometer data."
authors = ["Actigraph LLC <data.science@theactigraph.com>"]
maintainers = ["Ali Neishabouri <ali.neishabouri@theactigraph.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/actigraph/agcounts"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
numpy = ">=1.23.3"
pandas = ">=1.2.5"
scipy = ">=1.7.3"
mne = ">=1.4.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
mypy = "^1.11.1"
flake8 = "^7.1.0"
pydocstyle = "^6.3.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "agcounts"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
