[metadata]
name = agcounts
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A python package for extracting actigraphy counts from accelerometer data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/actigraph/agcounts
project_urls =
    Bug Tracker = https://github.com/actigraph/agcounts/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir = agcounts
packages = find:
python_requires = >=3.6

[options.packages.find]
where = agcounts
